src/parse/dbase/dBaseParser.py
# Generated from gramm/dbase/dBaseParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class dBaseParser ( Parser ):

    grammarFileName = "dBaseParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'<='", "'>='", "'!='", "'=='", 
                     "'<'", "'>'", "'::'", "':'", "'='", "'('", "')'", "','", 
                     "'.'", "'+'", "'-'", "'*'", "'/'", "'{'", "'}'", "';'" ]

    symbolicNames = [ "<INVALID>", "PARAMETER", "WITH", "ENDWITH", "PROGRAM", 
                      "RETURN", "FOR", "TO", "ENDFOR", "STEP", "BREAK", 
                      "DO", "CASE", "OTHERWISE", "WHILE", "ENDDO", "ENDCASE", 
                      "LOCAL", "NEW", "DELETE", "SUPER", "CLASS", "ENDCLASS", 
                      "OF", "THIS", "METHOD", "ENDMETHOD", "PROPERTY", "CREATE", 
                      "FILE", "IF", "ELSE", "ENDIF", "WRITE", "CALL", "FLOAT", 
                      "NUMBER", "STRING", "LE", "GE", "NE", "EQ", "LT", 
                      "GT", "DCOLON", "COLON", "ASSIGN", "LPAREN", "RPAREN", 
                      "COMMA", "DOT", "PLUS", "MINUS", "STAR", "SLASH", 
                      "LBRACE", "RBRACE", "SEMI", "BRACKET_STRING", "TRUE", 
                      "FALSE", "AND", "OR", "NOT", "IDENT", "WS", "LINECOMMENT_DBA", 
                      "LINECOMMENT_DBB", "LINECOMMENT_CPP", "BLOCKCOMMENT_START", 
                      "COMMENT_NEST_START", "COMMENT_END", "COMMENT_ANY" ]

    RULE_input = 0
    RULE_item = 1
    RULE_statement = 2
    RULE_createFileStmt = 3
    RULE_handlerList = 4
    RULE_breakStmt = 5
    RULE_returnStmt = 6
    RULE_doStmt = 7
    RULE_doCaseStmt = 8
    RULE_doCaseBranch = 9
    RULE_doOtherwiseBranch = 10
    RULE_doTarget = 11
    RULE_programRef = 12
    RULE_parameterStmt = 13
    RULE_paramNames = 14
    RULE_callExpr = 15
    RULE_doWhileStatement = 16
    RULE_condition = 17
    RULE_logicalOr = 18
    RULE_logicalAnd = 19
    RULE_logicalNot = 20
    RULE_comparison = 21
    RULE_compareOp = 22
    RULE_localDeclStmt = 23
    RULE_localAssignStmt = 24
    RULE_deleteStmt = 25
    RULE_forStmt = 26
    RULE_numberExpr = 27
    RULE_assignStmt = 28
    RULE_lvalue = 29
    RULE_dottedRef = 30
    RULE_exprStmt = 31
    RULE_ifStmt = 32
    RULE_block = 33
    RULE_writeStmt = 34
    RULE_writeArg = 35
    RULE_classDecl = 36
    RULE_classBody = 37
    RULE_classMember = 38
    RULE_withStmt = 39
    RULE_withTarget = 40
    RULE_withBody = 41
    RULE_withAssignStmt = 42
    RULE_withLvalue = 43
    RULE_propertyDecl = 44
    RULE_methodDecl = 45
    RULE_paramList = 46
    RULE_callStmt = 47
    RULE_callTarget = 48
    RULE_qualifiedName = 49
    RULE_argList = 50
    RULE_identifier = 51
    RULE_expr = 52
    RULE_additiveExpr = 53
    RULE_multiplicativeExpr = 54
    RULE_postfixExpr = 55
    RULE_postfixSuffix = 56
    RULE_newExpr = 57
    RULE_memberExpr = 58
    RULE_literal = 59
    RULE_primary = 60

    ruleNames =  [ "input", "item", "statement", "createFileStmt", "handlerList", 
                   "breakStmt", "returnStmt", "doStmt", "doCaseStmt", "doCaseBranch", 
                   "doOtherwiseBranch", "doTarget", "programRef", "parameterStmt", 
                   "paramNames", "callExpr", "doWhileStatement", "condition", 
                   "logicalOr", "logicalAnd", "logicalNot", "comparison", 
                   "compareOp", "localDeclStmt", "localAssignStmt", "deleteStmt", 
                   "forStmt", "numberExpr", "assignStmt", "lvalue", "dottedRef", 
                   "exprStmt", "ifStmt", "block", "writeStmt", "writeArg", 
                   "classDecl", "classBody", "classMember", "withStmt", 
                   "withTarget", "withBody", "withAssignStmt", "withLvalue", 
                   "propertyDecl", "methodDecl", "paramList", "callStmt", 
                   "callTarget", "qualifiedName", "argList", "identifier", 
                   "expr", "additiveExpr", "multiplicativeExpr", "postfixExpr", 
                   "postfixSuffix", "newExpr", "memberExpr", "literal", 
                   "primary" ]

    EOF = Token.EOF
    PARAMETER=1
    WITH=2
    ENDWITH=3
    PROGRAM=4
    RETURN=5
    FOR=6
    TO=7
    ENDFOR=8
    STEP=9
    BREAK=10
    DO=11
    CASE=12
    OTHERWISE=13
    WHILE=14
    ENDDO=15
    ENDCASE=16
    LOCAL=17
    NEW=18
    DELETE=19
    SUPER=20
    CLASS=21
    ENDCLASS=22
    OF=23
    THIS=24
    METHOD=25
    ENDMETHOD=26
    PROPERTY=27
    CREATE=28
    FILE=29
    IF=30
    ELSE=31
    ENDIF=32
    WRITE=33
    CALL=34
    FLOAT=35
    NUMBER=36
    STRING=37
    LE=38
    GE=39
    NE=40
    EQ=41
    LT=42
    GT=43
    DCOLON=44
    COLON=45
    ASSIGN=46
    LPAREN=47
    RPAREN=48
    COMMA=49
    DOT=50
    PLUS=51
    MINUS=52
    STAR=53
    SLASH=54
    LBRACE=55
    RBRACE=56
    SEMI=57
    BRACKET_STRING=58
    TRUE=59
    FALSE=60
    AND=61
    OR=62
    NOT=63
    IDENT=64
    WS=65
    LINECOMMENT_DBA=66
    LINECOMMENT_DBB=67
    LINECOMMENT_CPP=68
    BLOCKCOMMENT_START=69
    COMMENT_NEST_START=70
    COMMENT_END=71
    COMMENT_ANY=72

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class InputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(dBaseParser.EOF, 0)

        def item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dBaseParser.ItemContext)
            else:
                return self.getTypedRuleContext(dBaseParser.ItemContext,i)


        def getRuleIndex(self):
            return dBaseParser.RULE_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInput" ):
                listener.enterInput(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInput" ):
                listener.exitInput(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInput" ):
                return visitor.visitInput(self)
            else:
                return visitor.visitChildren(self)




    def input_(self):

        localctx = dBaseParser.InputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_input)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 1)) & ~0x3f) == 0 and ((1 << (_la - 1)) & -8196480819227851213) != 0):
                self.state = 122
                self.item()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 128
            self.match(dBaseParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDecl(self):
            return self.getTypedRuleContext(dBaseParser.ClassDeclContext,0)


        def methodDecl(self):
            return self.getTypedRuleContext(dBaseParser.MethodDeclContext,0)


        def statement(self):
            return self.getTypedRuleContext(dBaseParser.StatementContext,0)


        def getRuleIndex(self):
            return dBaseParser.RULE_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterItem" ):
                listener.enterItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitItem" ):
                listener.exitItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitItem" ):
                return visitor.visitItem(self)
            else:
                return visitor.visitChildren(self)




    def item(self):

        localctx = dBaseParser.ItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_item)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.classDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.methodDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 132
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifStmt(self):
            return self.getTypedRuleContext(dBaseParser.IfStmtContext,0)


        def doCaseStmt(self):
            return self.getTypedRuleContext(dBaseParser.DoCaseStmtContext,0)


        def doStmt(self):
            return self.getTypedRuleContext(dBaseParser.DoStmtContext,0)


        def breakStmt(self):
            return self.getTypedRuleContext(dBaseParser.BreakStmtContext,0)


        def parameterStmt(self):
            return self.getTypedRuleContext(dBaseParser.ParameterStmtContext,0)


        def writeStmt(self):
            return self.getTypedRuleContext(dBaseParser.WriteStmtContext,0)


        def assignStmt(self):
            return self.getTypedRuleContext(dBaseParser.AssignStmtContext,0)


        def createFileStmt(self):
            return self.getTypedRuleContext(dBaseParser.CreateFileStmtContext,0)


        def exprStmt(self):
            return self.getTypedRuleContext(dBaseParser.ExprStmtContext,0)


        def localAssignStmt(self):
            return self.getTypedRuleContext(dBaseParser.LocalAssignStmtContext,0)


        def localDeclStmt(self):
            return self.getTypedRuleContext(dBaseParser.LocalDeclStmtContext,0)


        def callStmt(self):
            return self.getTypedRuleContext(dBaseParser.CallStmtContext,0)


        def classDecl(self):
            return self.getTypedRuleContext(dBaseParser.ClassDeclContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(dBaseParser.ForStmtContext,0)


        def doWhileStatement(self):
            return self.getTypedRuleContext(dBaseParser.DoWhileStatementContext,0)


        def deleteStmt(self):
            return self.getTypedRuleContext(dBaseParser.DeleteStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(dBaseParser.ReturnStmtContext,0)


        def withStmt(self):
            return self.getTypedRuleContext(dBaseParser.WithStmtContext,0)


        def getRuleIndex(self):
            return dBaseParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = dBaseParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.ifStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.doCaseStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 137
                self.doStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 138
                self.breakStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 139
                self.parameterStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 140
                self.writeStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 141
                self.assignStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 142
                self.createFileStmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 143
                self.exprStmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 144
                self.localAssignStmt()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 145
                self.localDeclStmt()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 146
                self.callStmt()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 147
                self.classDecl()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 148
                self.forStmt()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 149
                self.doWhileStatement()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 150
                self.deleteStmt()
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 151
                self.returnStmt()
                pass

            elif la_ == 18:
                self.enterOuterAlt(localctx, 18)
                self.state = 152
                self.withStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateFileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(dBaseParser.CREATE, 0)

        def FILE(self):
            return self.getToken(dBaseParser.FILE, 0)

        def expr(self):
            return self.getTypedRuleContext(dBaseParser.ExprContext,0)


        def getRuleIndex(self):
            return dBaseParser.RULE_createFileStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateFileStmt" ):
                listener.enterCreateFileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateFileStmt" ):
                listener.exitCreateFileStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateFileStmt" ):
                return visitor.visitCreateFileStmt(self)
            else:
                return visitor.visitChildren(self)




    def createFileStmt(self):

        localctx = dBaseParser.CreateFileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_createFileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(dBaseParser.CREATE)
            self.state = 156
            self.match(dBaseParser.FILE)
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 157
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HandlerListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(dBaseParser.LBRACE, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dBaseParser.ExprContext)
            else:
                return self.getTypedRuleContext(dBaseParser.ExprContext,i)


        def RBRACE(self):
            return self.getToken(dBaseParser.RBRACE, 0)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(dBaseParser.SEMI)
            else:
                return self.getToken(dBaseParser.SEMI, i)

        def getRuleIndex(self):
            return dBaseParser.RULE_handlerList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHandlerList" ):
                listener.enterHandlerList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHandlerList" ):
                listener.exitHandlerList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHandlerList" ):
                return visitor.visitHandlerList(self)
            else:
                return visitor.visitChildren(self)




    def handlerList(self):

        localctx = dBaseParser.HandlerListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_handlerList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(dBaseParser.LBRACE)
            self.state = 161
            self.expr()
            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==57:
                self.state = 162
                self.match(dBaseParser.SEMI)
                self.state = 163
                self.expr()
                self.state = 168
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 169
            self.match(dBaseParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(dBaseParser.BREAK, 0)

        def getRuleIndex(self):
            return dBaseParser.RULE_breakStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreakStmt" ):
                listener.enterBreakStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreakStmt" ):
                listener.exitBreakStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakStmt" ):
                return visitor.visitBreakStmt(self)
            else:
                return visitor.visitChildren(self)




    def breakStmt(self):

        localctx = dBaseParser.BreakStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_breakStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(dBaseParser.BREAK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(dBaseParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(dBaseParser.ExprContext,0)


        def getRuleIndex(self):
            return dBaseParser.RULE_returnStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)




    def returnStmt(self):

        localctx = dBaseParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_returnStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(dBaseParser.RETURN)
            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 174
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DO(self):
            return self.getToken(dBaseParser.DO, 0)

        def doTarget(self):
            return self.getTypedRuleContext(dBaseParser.DoTargetContext,0)


        def WITH(self):
            return self.getToken(dBaseParser.WITH, 0)

        def argList(self):
            return self.getTypedRuleContext(dBaseParser.ArgListContext,0)


        def getRuleIndex(self):
            return dBaseParser.RULE_doStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoStmt" ):
                listener.enterDoStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoStmt" ):
                listener.exitDoStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoStmt" ):
                return visitor.visitDoStmt(self)
            else:
                return visitor.visitChildren(self)




    def doStmt(self):

        localctx = dBaseParser.DoStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_doStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.match(dBaseParser.DO)
            self.state = 178
            self.doTarget()
            self.state = 181
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 179
                self.match(dBaseParser.WITH)
                self.state = 180
                self.argList()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoCaseStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DO(self):
            return self.getToken(dBaseParser.DO, 0)

        def CASE(self):
            return self.getToken(dBaseParser.CASE, 0)

        def ENDCASE(self):
            return self.getToken(dBaseParser.ENDCASE, 0)

        def doCaseBranch(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dBaseParser.DoCaseBranchContext)
            else:
                return self.getTypedRuleContext(dBaseParser.DoCaseBranchContext,i)


        def doOtherwiseBranch(self):
            return self.getTypedRuleContext(dBaseParser.DoOtherwiseBranchContext,0)


        def getRuleIndex(self):
            return dBaseParser.RULE_doCaseStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoCaseStmt" ):
                listener.enterDoCaseStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoCaseStmt" ):
                listener.exitDoCaseStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoCaseStmt" ):
                return visitor.visitDoCaseStmt(self)
            else:
                return visitor.visitChildren(self)




    def doCaseStmt(self):

        localctx = dBaseParser.DoCaseStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_doCaseStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.match(dBaseParser.DO)
            self.state = 184
            self.match(dBaseParser.CASE)
            self.state = 186 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 185
                self.doCaseBranch()
                self.state = 188 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==12):
                    break

            self.state = 191
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 190
                self.doOtherwiseBranch()


            self.state = 193
            self.match(dBaseParser.ENDCASE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoCaseBranchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CASE(self):
            return self.getToken(dBaseParser.CASE, 0)

        def expr(self):
            return self.getTypedRuleContext(dBaseParser.ExprContext,0)


        def block(self):
            return self.getTypedRuleContext(dBaseParser.BlockContext,0)


        def getRuleIndex(self):
            return dBaseParser.RULE_doCaseBranch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoCaseBranch" ):
                listener.enterDoCaseBranch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoCaseBranch" ):
                listener.exitDoCaseBranch(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoCaseBranch" ):
                return visitor.visitDoCaseBranch(self)
            else:
                return visitor.visitChildren(self)




    def doCaseBranch(self):
